@@ -1,3 +1,9 @@
+2008-06-03  Jorn Baayen  <jorn@openedhand.com>
+
+	* src/network-light/upnp.c (init_upnp):
+
+	Update for new gupnp_root_device_new() API.
+
 2008-06-02  Zeeshan Ali Khattak  <zeenix@gmail.com>
 	    Hugo Calleja <hugo.calleja@gmail.com>
 
